--- a/Index/index.html
+++ b/Index/index.html
@@ -25,18 +25,20 @@
   </head>
 
   <body class="d-flex flex-column min-vh-100">
-    <header class="container-fluid bg-dark sticky-top">
-      <!-- Navbar -->
+    <!-- Navbar Section -->
+    <header class="container-fluid border-bottom border-5 bg-dark sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand my-3 ms-1 p-0" href="#">
-          <img
-            class=""
-            src="/Images/Longwater Records No Text.png"
-            height="100"
-            alt=""
-            loading="lazy"
-          />
-        </a>
+        <div class="navbar-header">
+          <a class="navbar-brand my-3 ms-1 p-0" href="#">
+            <img
+              class=""
+              src="/Images/Longwater Records No Text.png"
+              height="100"
+              alt=""
+              loading="lazy"
+            />
+          </a>
+        </div>
 
         <button
           class="navbar-toggler"
@@ -48,11 +50,9 @@
         </button>
 
         <div class="collapse navbar-collapse p-5" id="navmenu">
-          <ul class="navbar-nav ms-auto mb-2 h5">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="/Index/index.html"
-                >Home</a
-              >
+          <ul class="nav navbar-nav ms-auto h5">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/About/about.html"
@@ -68,9 +68,10 @@
         </div>
       </nav>
     </header>
+    <!-- Navbar Section -->
 
     <main>
-      <!-- Info -->
+      <!-- Info Section -->
       <section class="container-fluid text-white">
         <div class="bg-dark mx-4 my-5 p-5">
           <div class="row d-flex align-items-center">
@@ -86,14 +87,6 @@
               <p class="display-1 pb-3 border-bottom border-top">
                 Longwater Records
               </p>
-            </div>
-            <div class="col d-none d-lg-block">
-              <img
-                class="img-fluid"
-                src="/Images/Longwater Records No Text.png"
-                alt=""
-                loading="lazy"
-              />
             </div>
           </div>
           <div class="row pt-5">
@@ -134,23 +127,117 @@
           </div>
         </div>
       </section>
+      <!-- Info Section -->
+
+      <!-- Contact Section -->
+      <section class="container-fluid text-white">
+        <div class="bg-dark mx-4 my-5 p-5">
+          <h1 class="mb-5">Contact</h1>
+          <form action="#" class="was-validated">
+            <div class="row mb-2">
+              <div class="col mb-3">
+                <label for="firstName" class="form-label me-3"
+                  >First Name</label
+                >
+                <div class="input-group">
+                  <span class="input-group-text bi-blockquote-left"></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="firstNameForm"
+                    id="firstName"
+                    placeholder="John"
+                  />
+                  <div class="valid-feedback"></div>
+                  <div class="invalid-feedback">Please fill out this</div>
+                </div>
+              </div>
+
+              <div class="col mb-3">
+                <label for="lastName" class="form-label">Last Name</label>
+                <div class="input-group">
+                  <span class="input-group-text bi-blockquote-right"></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="lastNameForm"
+                    id="lastName"
+                    placeholder="Doe"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="row mb-2">
+              <div class="col mb-3">
+                <label for="emailAdress" class="form-label me-3">Email</label>
+                <div class="input-group">
+                  <span class="input-group-text bi-envelope-at"></span>
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="emailForm"
+                    id="emailAdress"
+                    placeholder="johndoe@example.com"
+                  />
+                  <div class="valid-feedback"></div>
+                  <div class="invalid-feedback">Please fill out this</div>
+                </div>
+              </div>
+
+              <div class="col mb-3">
+                <label for="adress" class="form-label">Phone</label>
+                <div class="input-group">
+                  <span class="input-group-text bi-telephone"></span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    name="phoneNumberForm"
+                    id="phoneNumber"
+                    placeholder="0123-45 67 89"
+                  />
+                </div>
+              </div>
+            </div>
+            <label for="message" class="form-label me-3">Message</label>
+            <div class="mb-3 input-group">
+              <span class="input-group-text bi-chat-left"></span>
+              <textarea
+                type="text"
+                class="form-control"
+                name="messageForm"
+                id="message"
+                placeholder="Enter message"
+              ></textarea>
+            </div>
+            <p>Thanks for submitting your message!</p>
+            <div class="d-flex justify-content-center">
+              <button class="btn btn-primary px-5 mt-3" type="sumbit">
+                Submit
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+      <!-- Contact Section -->
     </main>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
           <a href="#" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2">About</a>
+          <a href="/About/about.html" class="nav-link px-2">About</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2">Shop</a>
+          <a href="/Shop/shop.html" class="nav-link px-2">Shop</a>
         </li>
       </ul>
       <p class="text-center">Copyright © Longwater Records 2023</p>
     </footer>
+    <!-- Footer Section -->
 
     <!-- Bootstrap JavaScript Libraries -->
     <script
