--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Webbutveckling-Labb1</title>
+    <title>LONGWATER RECORDS</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,18 +25,20 @@
   </head>
 
   <body class="d-flex flex-column min-vh-100">
-    <header class="container-fluid bg-dark sticky-top">
-      <!-- Navbar -->
+    <!-- Navbar Section -->
+    <header class="container-fluid border-bottom border-5 bg-dark sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand my-3 ms-1 p-0" href="#">
-          <img
-            class=""
-            src="/Images/Longwater Records No Text.png"
-            height="100"
-            alt=""
-            loading="lazy"
-          />
-        </a>
+        <div class="navbar-header">
+          <a class="navbar-brand my-3 ms-1 p-0" href="#">
+            <img
+              class=""
+              src="/Images/Longwater Records No Text.png"
+              height="100"
+              alt=""
+              loading="lazy"
+            />
+          </a>
+        </div>
 
         <button
           class="navbar-toggler"
@@ -48,71 +50,55 @@
         </button>
 
         <div class="collapse navbar-collapse p-5" id="navmenu">
-          <ul class="navbar-nav ms-auto mb-2 h5">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="/Index/index.html">Home</a>
+          <ul class="nav navbar-nav ms-auto h5">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/Index/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/About/about.html">About Us</a>
+              <a class="nav-link" aria-current="page" href="/About/about.html"
+                >About Us</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Shop/shop.html"> Shop </a>
+              <a class="nav-link active" aria-current="page" href="#"> Shop </a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
+    <!-- Navbar Section -->
 
     <main>
-      <!-- Info -->
+      <!-- Product Cards Section -->
       <section class="container-fluid text-white">
         <div class="bg-dark mx-4 my-5 p-5">
-          <div class="row d-flex align-items-center">
-            <div class="col-3">
-              <img
-                class="img-fluid"
-                src="/Images/Longwater Records No Text.png"
-                alt=""
-                loading="lazy"
-              />
-            </div>
-            <div class="col text-center">
-              <p class="display-5 pb-3 border-bottom">About us</p>
-            </div>
+          <h1 class="mb-3">Shop</h1>
+
+          <div id="shopDiv">
+            <!-- Products Here -->
           </div>
-          <p class="pt-5">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum
-            minima inventore quaerat maiores est atque, magni at repellat hic
-            enim nam consectetur ullam optio eos laborum, in explicabo cumque
-            culpa ad! Maiores saepe, at consequatur excepturi quis fugiat nam
-            repellendus sequi esse facilis, expedita enim tempora cum. Magni
-            impedit alias amet, necessitatibus laborum voluptas tenetur tempore
-            repellat pariatur nisi. Atque ea, temporibus nobis nisi, cumque
-            explicabo itaque animi voluptatibus unde, libero facilis provident
-            nihil ad totam odio ducimus molestiae minima! Impedit accusamus
-            laboriosam dolores non deleniti, voluptate tempora sequi tempore
-            dolorum reprehenderit. Beatae obcaecati ipsam tempore molestiae vero
-            illo cupiditate!
-          </p>
-        </div>
       </section>
+      <!-- Product Cards Section -->
     </main>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="#" class="nav-link px-2">Home</a>
+          <a href="/Index/index.html" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link px-2">About</a>
+          <a href="/About/about.html" class="nav-link px-2">About</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link px-2">Shop</a>
         </li>
-    </ul>
+      </ul>
       <p class="text-center">Copyright © Longwater Records 2023</p>
     </footer>
+    <!-- Footer Section -->
 
     <!-- Bootstrap JavaScript Libraries -->
     <script
@@ -120,5 +106,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
+    <script src="/site.js"></script>
   </body>
 </html>
