Added list of albums

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -71,6 +71,7 @@
     <!-- Navbar Section -->
 
     <main>
+      
       <!-- Product Cards Section -->
       <section class="container-fluid text-white">
         <div class="bg-dark mx-4 my-5 p-5">
@@ -79,8 +80,10 @@
           <div id="shopDiv">
             <!-- Products Here -->
           </div>
+        </div>
       </section>
       <!-- Product Cards Section -->
+
     </main>
 
     <!-- Footer Section -->
@@ -107,6 +110,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/site.js"></script>
+    <script type="module" src="/site.js"></script>
   </body>
 </html>
