--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -103,7 +103,7 @@
               Checkout
               <span class="bi bi-basket"></span>
             </button>
-            <h1 class="h5">Total: *** Kr</h1>
+            <h1 class="h5">Total: <span id="cartTotal">0</span> Kr</h1>
           </div>
 
         </div>
