Migrate element models to elementModels.sj

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -154,5 +154,6 @@
     ></script>
 
     <script type="module" src="/site.js"></script>
+    <script type="module" src="/elementModels.js"></script>
   </body>
 </html>
