--- a/About/about.html
+++ b/About/about.html
@@ -119,7 +119,7 @@
                   <input
                     type="text"
                     class="form-control"
-                    name="firstNameForm"
+                    name="firstName"
                     id="firstName"
                     placeholder="John"
                   />
@@ -135,7 +135,7 @@
                   <input
                     type="text"
                     class="form-control"
-                    name="lastNameForm"
+                    name="lastName"
                     id="lastName"
                     placeholder="Doe"
                   />
