--- a/Index/index.html
+++ b/Index/index.html
@@ -89,6 +89,10 @@
               </p>
             </div>
           </div>
+          <div class="border-top border-bottom p-5">
+            <h1>Genre of the Day:</h1>
+            <h5 id="genreOfTheDay"></h5>
+          </div>
           <div class="row pt-5">
             <div class="col">
               <p>
@@ -245,5 +249,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
