--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
 
-    <!-- Bootstrap Icons v.1.5.0 --> 
+    <!-- Bootstrap Icons v.1.5.0 -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
@@ -25,81 +25,71 @@
   </head>
 
   <body class="d-flex flex-column min-vh-100">
-    <!-- Navbar Section -->
-    <header class="container-fluid border-bottom border-5 bg-dark sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="navbar-header">
-          <a class="navbar-brand my-3 ms-1 p-0" href="#">
-            <img
-              class=""
-              src="/Images/Longwater Records No Text.png"
-              height="100"
-              alt=""
-              loading="lazy"
-            />
-          </a>
-        </div>
+    <header class="sticky-top">
+      <!-- Navbar Section -->
+      <div class="container-fluid border-bottom border-5 bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="navbar-header">
+            <a class="navbar-brand my-3 ms-1 p-0" href="#">
+              <img
+                class=""
+                src="/Images/Longwater Records No Text.png"
+                height="100"
+                alt=""
+                loading="lazy"
+              />
+            </a>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navmenu"
+          >
+            <span class="navbar-toggler-icon"> </span>
+          </button>
+          <div class="collapse navbar-collapse p-5" id="navmenu">
+            <ul class="nav navbar-nav ms-auto h5">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/Index/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/About/about.html"
+                  >About Us</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                  Shop
+                </a>
+              </li>
+              <li class="nav-item ms-auto">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="#"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasId"
+                  ><span id="basketIcon" class="bi bi-basket"></span
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <!-- Navbar Section -->
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navmenu"
-        >
-          <span class="navbar-toggler-icon"> </span>
-        </button>
-
-        <div class="collapse navbar-collapse p-5" id="navmenu">
-          <ul class="nav navbar-nav ms-auto h5">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Index/index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/About/about.html"
-                >About Us</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"> Shop </a>
-            </li>
-            <li class="nav-item ms-auto">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="#"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasId"
-                ><span id="basketIcon" class="bi bi-basket"></span
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <!-- Cart Alert Section -->
+      <div
+        id="cartAlertContainer"
+        class="p-0 m-2 ms-auto d-flex justify-content-end container"
+      ></div>
+      <!-- Cart Alert Section -->
     </header>
-    <!-- Navbar Section -->
 
     <main>
-      <div class="p-0 m-2 ms-auto d-flex justify-content-end container">
-        <div class="alert alert-success alert-dismissible fade show col-3">
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-          ></button>
-          <strong>Success!</strong> Product added to cart
-          <div id="alertAmount" class="d-flex align-items-center mt-1">
-            <div class="border rounded-5 px-3 py-1 border-dark">
-              <h1 class="h5">1</h1>
-            </div>
-            <button type="button" class="btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasId">
-              <span id="basketIcon" class="bi bi-basket"></span>
-            </button>
-          </div>
-        </div>
-      </div>
-
       <!-- Offcanvas Sidebar -->
       <div class="text-bg-dark offcanvas offcanvas-end" id="offcanvasId">
         <div class="offcanvas-header">
@@ -126,19 +116,83 @@
         </div>
       </div>
 
-      <!-- Button to open the offcanvas sidebar -->
+      <!-- Offcanvas Sidebar -->
 
-      <!-- Product Cards Section -->
-      <section class="container-fluid text-white">
+      <!-- Shop Section -->
+      <section class="container-fluid">
         <div class="bg-dark mx-4 my-5 p-5">
-          <h1 class="mb-3">Shop</h1>
+          <!-- Modal Section -->
+          <div
+            class="modal fade"
+            id="albumModal"
+            tabindex="-1"
+            aria-labelledby="albumModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header text-bg-dark">
+                  <h1 class="modal-title fs-5" id="albumModalLabel">
+                    Modal title
+                  </h1>
+                  <button
+                    type="button"
+                    class="bi bi-x-lg bg-dark text-white border-0"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body text-bg-dark">
+                  <iframe
+                    style="border-radius: 12px"
+                    src="https://open.spotify.com/embed/album/5j54NcBr5wBCB129cdjad7?utm_source=generator"
+                    width="100%"
+                    height="352"
+                    frameborder="0"
+                    allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"
+                  ></iframe>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                    consectetur facere illum aperiam explicabo nulla, impedit
+                    cum necessitatibus sint! Quod magni dolorum consequuntur hic
+                    doloremque perferendis enim at cumque earum.
+                  </p>
+                </div>
+                <div class="modal-footer text-bg-dark">
+                  <h1 class="me-auto"><span id="albumModalPrice"></span> kr</h1>
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                  <button
+                    id="modalCartButton"
+                    type="button"
+                    class="btn btn-primary modal-cart-button"
+                  >
+                    Add To Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Modal Section -->
+
+          <!-- Product Cards Section -->
+          <h1 class="mb-3 text-white">Shop</h1>
 
           <div id="shopDiv">
             <!-- Products Here -->
           </div>
+          <!-- Product Cards Section -->
         </div>
       </section>
-      <!-- Product Cards Section -->
+
+      <!-- Shop Section -->
     </main>
 
     <!-- Footer Section -->
@@ -170,6 +224,7 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- JavaScript Modules -->
     <script type="module" src="/site.js"></script>
     <script type="module" src="/elementModels.js"></script>
   </body>
