--- a/Index/index.html
+++ b/Index/index.html
@@ -45,6 +45,7 @@
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navmenu"
+          aria-label="Toggle Navbar"
         >
           <span class="navbar-toggler-icon"> </span>
         </button>
@@ -75,7 +76,7 @@
       <section class="container-fluid text-white">
         <div class="bg-dark mx-4 my-5 p-5">
           <div class="row d-flex align-items-center">
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-md-block">
               <img
                 class="img-fluid"
                 src="/Images/Longwater Records No Text.png"
@@ -89,12 +90,9 @@
               </p>
             </div>
           </div>
-          <div class="border-top border-bottom p-5">
-            <h1>Genre of the Day:</h1>
-            <h5 id="genreOfTheDay"></h5>
-          </div>
+
           <div class="row pt-5">
-            <div class="col">
+            <div class="col-lg-6">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
                 natus reiciendis incidunt culpa rerum? Quia alias ab blanditiis,
@@ -111,7 +109,7 @@
                 odio? Incidunt quod omnis fuga adipisci!
               </p>
             </div>
-            <div class="col">
+            <div class="col-lg-6">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Nostrum illum dolorum ipsa! Architecto perferendis dolor dolorum
@@ -131,99 +129,19 @@
           </div>
         </div>
       </section>
+
       <!-- Info Section -->
 
-      <!-- Contact Section -->
+      <!-- Genre Section -->
       <section class="container-fluid text-white">
         <div class="bg-dark mx-4 my-5 p-5">
-          <h1 class="mb-5">Contact</h1>
-          <form action="#" class="was-validated">
-            <div class="row mb-2">
-              <div class="col mb-3">
-                <label for="firstName" class="form-label me-3"
-                  >First Name</label
-                >
-                <div class="input-group">
-                  <span class="input-group-text bi-blockquote-left"></span>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="firstNameForm"
-                    id="firstName"
-                    placeholder="John"
-                  />
-                  <div class="valid-feedback"></div>
-                  <div class="invalid-feedback">Please fill out this</div>
-                </div>
-              </div>
-
-              <div class="col mb-3">
-                <label for="lastName" class="form-label">Last Name</label>
-                <div class="input-group">
-                  <span class="input-group-text bi-blockquote-right"></span>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="lastNameForm"
-                    id="lastName"
-                    placeholder="Doe"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="row mb-2">
-              <div class="col mb-3">
-                <label for="emailAdress" class="form-label me-3">Email</label>
-                <div class="input-group">
-                  <span class="input-group-text bi-envelope-at"></span>
-                  <input
-                    type="email"
-                    class="form-control"
-                    name="emailForm"
-                    id="emailAdress"
-                    placeholder="johndoe@example.com"
-                  />
-                  <div class="valid-feedback"></div>
-                  <div class="invalid-feedback">Please fill out this</div>
-                </div>
-              </div>
-
-              <div class="col mb-3">
-                <label for="adress" class="form-label">Phone</label>
-                <div class="input-group">
-                  <span class="input-group-text bi-telephone"></span>
-                  <input
-                    type="number"
-                    class="form-control"
-                    name="phoneNumberForm"
-                    id="phoneNumber"
-                    placeholder="0123-45 67 89"
-                  />
-                </div>
-              </div>
-            </div>
-            <label for="message" class="form-label me-3">Message</label>
-            <div class="mb-3 input-group">
-              <span class="input-group-text bi-chat-left"></span>
-              <textarea
-                type="text"
-                class="form-control"
-                name="messageForm"
-                id="message"
-                placeholder="Enter message"
-              ></textarea>
-            </div>
-            <p>Thanks for submitting your message!</p>
-            <div class="d-flex justify-content-center">
-              <button class="btn btn-primary px-5 mt-3" type="sumbit">
-                Submit
-              </button>
-            </div>
-          </form>
+          <div class="border-top border-bottom p-5 text-center">
+            <h1>Genre of the Day:</h1>
+            <h5 id="genreOfTheDay"></h5>
+          </div>
         </div>
       </section>
-      <!-- Contact Section -->
+      <!-- Genre Section -->
     </main>
 
     <!-- Footer Section -->
