Finished Cart-Modal

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -122,64 +122,10 @@
       <section class="container-fluid">
         <div class="bg-dark mx-4 my-5 p-5">
           <!-- Modal Section -->
-          <div
-            class="modal fade"
-            id="albumModal"
-            tabindex="-1"
-            aria-labelledby="albumModalLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
-                <div class="modal-header text-bg-dark">
-                  <h1 class="modal-title fs-5" id="albumModalLabel">
-                    Modal title
-                  </h1>
-                  <button
-                    type="button"
-                    class="bi bi-x-lg bg-dark text-white border-0"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body text-bg-dark">
-                  <iframe
-                    style="border-radius: 12px"
-                    src="https://open.spotify.com/embed/album/5j54NcBr5wBCB129cdjad7?utm_source=generator"
-                    width="100%"
-                    height="352"
-                    frameborder="0"
-                    allowfullscreen=""
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                    loading="lazy"
-                  ></iframe>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                    consectetur facere illum aperiam explicabo nulla, impedit
-                    cum necessitatibus sint! Quod magni dolorum consequuntur hic
-                    doloremque perferendis enim at cumque earum.
-                  </p>
-                </div>
-                <div class="modal-footer text-bg-dark">
-                  <h1 class="me-auto"><span id="albumModalPrice"></span> kr</h1>
-                  <button
-                    type="button"
-                    class="btn btn-secondary"
-                    data-bs-dismiss="modal"
-                  >
-                    Close
-                  </button>
-                  <button
-                    id="modalCartButton"
-                    type="button"
-                    class="btn btn-primary modal-cart-button"
-                  >
-                    Add To Cart
-                  </button>
-                </div>
-              </div>
-            </div>
+          <div id="modalDiv">
+            <!-- Modals Here -->
           </div>
+          
           <!-- Modal Section -->
 
           <!-- Product Cards Section -->
