--- a/About/about.html
+++ b/About/about.html
@@ -6,6 +6,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Eczar&family=Gentium+Plus&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Bootstrap CSS v5.3.0 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -200,8 +209,7 @@
           <h1 class="mb-5">Map</h1>
           <div class="d-flex justify-content-center align-items-center">
             <div id="gmap-container">
-              <div
-                id="gmap-canvas">
+              <div id="gmap-canvas">
                 <iframe
                   loading="lazy"
                   frameborder="0"
