Changed color of Index

--- a/Index/index.html
+++ b/Index/index.html
@@ -99,42 +99,45 @@
             </div>
           </div>
 
-          <div class="row pt-5">
-            <div class="col-lg-6">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                natus reiciendis incidunt culpa rerum? Quia alias ab blanditiis,
-                autem pariatur adipisci animi rerum modi aspernatur tempore
-                beatae. Culpa assumenda soluta doloremque omnis quasi nulla
-                debitis reiciendis necessitatibus unde officia obcaecati,
-                praesentium nobis ducimus quod libero iure, impedit quae.
-                Impedit recusandae unde quis mollitia veritatis delectus, totam
-                iste in aspernatur suscipit quae animi consequatur quas
-                voluptates neque accusamus deserunt accusantium vero. Optio
-                architecto tempora praesentium! Obcaecati, fugiat eveniet.
-                Distinctio sit quis similique ullam velit blanditiis, eum ut
-                dolor minus? Eum aperiam consequuntur adipisci, animi optio
-                odio? Incidunt quod omnis fuga adipisci!
-              </p>
+         
+            <div class="pt-5">
+              <div class="row border">
+                <div class="col-lg-6 py-3 ps-3">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                    natus reiciendis incidunt culpa rerum? Quia alias ab blanditiis,
+                    autem pariatur adipisci animi rerum modi aspernatur tempore
+                    beatae. Culpa assumenda soluta doloremque omnis quasi nulla
+                    debitis reiciendis necessitatibus unde officia obcaecati,
+                    praesentium nobis ducimus quod libero iure, impedit quae.
+                    Impedit recusandae unde quis mollitia veritatis delectus, totam
+                    iste in aspernatur suscipit quae animi consequatur quas
+                    voluptates neque accusamus deserunt accusantium vero. Optio
+                    architecto tempora praesentium! Obcaecati, fugiat eveniet.
+                    Distinctio sit quis similique ullam velit blanditiis, eum ut
+                    dolor minus? Eum aperiam consequuntur adipisci, animi optio
+                    odio? Incidunt quod omnis fuga adipisci!
+                  </p>
+                </div>
+                <div class="col-lg-6 py-3 pe-3">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Nostrum illum dolorum ipsa! Architecto perferendis dolor dolorum
+                    delectus, impedit laudantium enim temporibus expedita officia
+                    placeat asperiores consectetur facilis non cumque ad id
+                    reiciendis eligendi? Minima praesentium, omnis maxime voluptate
+                    cumque veniam repellat quam sed mollitia corporis assumenda
+                    necessitatibus. Exercitationem reprehenderit sequi minus eaque
+                    dolores illo suscipit veritatis voluptas saepe, expedita dolore
+                    omnis porro voluptates alias consequuntur sunt vel fuga dicta.
+                    Ducimus hic veniam, esse expedita possimus ea necessitatibus rem
+                    sed ullam tempore perferendis nemo dolorem nesciunt fuga
+                    facilis? Aliquid, laborum, exercitationem doloribus nihil
+                    obcaecati deserunt porro eaque nobis tempora qui odit!
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-6">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Nostrum illum dolorum ipsa! Architecto perferendis dolor dolorum
-                delectus, impedit laudantium enim temporibus expedita officia
-                placeat asperiores consectetur facilis non cumque ad id
-                reiciendis eligendi? Minima praesentium, omnis maxime voluptate
-                cumque veniam repellat quam sed mollitia corporis assumenda
-                necessitatibus. Exercitationem reprehenderit sequi minus eaque
-                dolores illo suscipit veritatis voluptas saepe, expedita dolore
-                omnis porro voluptates alias consequuntur sunt vel fuga dicta.
-                Ducimus hic veniam, esse expedita possimus ea necessitatibus rem
-                sed ullam tempore perferendis nemo dolorem nesciunt fuga
-                facilis? Aliquid, laborum, exercitationem doloribus nihil
-                obcaecati deserunt porro eaque nobis tempora qui odit!
-              </p>
-            </div>
-          </div>
         </div>
       </section>
 
