--- a/About/about.html
+++ b/About/about.html
@@ -198,7 +198,7 @@
             </div>
             <p>Thanks for submitting your message!</p>
             <div class="d-flex justify-content-center">
-              <button class="btn btn-primary px-5 mt-3" type="sumbit">
+              <button class="btn btn-primary px-5 mt-3" type="submit">
                 Submit
               </button>
             </div>
