--- a/Index/index.html
+++ b/Index/index.html
@@ -40,7 +40,7 @@
           <a class="navbar-brand my-3 ms-1 p-0" href="#">
             <img
               class=""
-              src="/Images/Longwater Records No Text.png"
+              src="/Images/Longwater Records No Text.webp"
               height="100"
               alt=""
               loading="lazy"
@@ -87,7 +87,7 @@
             <div class="col d-none d-md-block">
               <img
                 class="img-fluid"
-                src="/Images/Longwater Records No Text.png"
+                src="/Images/Longwater Records No Text.webp"
                 alt=""
                 loading="lazy"
               />
