Fixed maps and updated links, Closes #8

--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -59,7 +59,7 @@
           <div class="collapse navbar-collapse p-5" id="navmenu">
             <ul class="nav navbar-nav ms-auto h5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/Index/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -153,7 +153,7 @@
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="/Index/index.html" class="nav-link px-2">Home</a>
+          <a href="/index.html" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
           <a href="/About/about.html" class="nav-link px-2">About</a>
@@ -179,7 +179,7 @@
     ></script>
 
     <!-- JavaScript Modules -->
-    <script type="module" src="/site.js"></script>
-    <script type="module" src="/elementModels.js"></script>
+    <script type="module" src="/JavaScript/site.js"></script>
+    <script type="module" src="/JavaScript/elementModels.js"></script>
   </body>
 </html>
