--- a/About/about.html
+++ b/About/about.html
@@ -63,7 +63,7 @@
         <div class="collapse navbar-collapse p-5" id="navmenu">
           <ul class="nav navbar-nav ms-auto h5">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Index/index.html"
+              <a class="nav-link" aria-current="page" href="/index.html"
                 >Home</a
               >
             </li>
@@ -233,7 +233,7 @@
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="/Index/index.html" class="nav-link px-2">Home</a>
+          <a href="/index.html" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link px-2">About</a>
