--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
 
     <!-- CSS Stylesheet Index -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/Index/index.css" />
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -178,6 +178,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="Index/index.js"></script>
   </body>
 </html>
