--- a/About/about.html
+++ b/About/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Webbutveckling-Labb1</title>
+    <title>LONGWATER RECORDS : ABOUT US</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
