Fixed icon in title, Closes #9

--- a/About/about.html
+++ b/About/about.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Title Icon -->
+    <link rel="shortcut icon" href="/Images/Longwater-Records-Icon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
