--- a/Shop/shop.html
+++ b/Shop/shop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title Icon -->
-    <link rel="shortcut icon" href="/Images/Longwater-Records-Icon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Images/Longwater-Records-Icon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,7 +44,7 @@
             <a class="navbar-brand my-3 ms-1 p-0" href="#">
               <img
                 class=""
-                src="/Images/Longwater Records No Text.webp"
+                src="../Images/Longwater Records No Text.webp"
                 height="100"
                 alt=""
                 loading="lazy"
@@ -62,12 +62,12 @@
           <div class="collapse navbar-collapse p-5" id="navmenu">
             <ul class="nav navbar-nav ms-auto h5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/About/about.html"
+                <a class="nav-link" aria-current="page" href="../About/about.html"
                   >About Us</a
                 >
               </li>
@@ -156,10 +156,10 @@
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="/index.html" class="nav-link px-2">Home</a>
+          <a href="../index.html" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/About/about.html" class="nav-link px-2">About</a>
+          <a href="../About/about.html" class="nav-link px-2">About</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link px-2">Shop</a>
@@ -182,7 +182,7 @@
     ></script>
 
     <!-- JavaScript Modules -->
-    <script type="module" src="/JavaScript/site.js"></script>
-    <script type="module" src="/JavaScript/elementModels.js"></script>
+    <script type="module" src="../JavaScript/site.js"></script>
+    <script type="module" src="../JavaScript/elementModels.js"></script>
   </body>
 </html>
