--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
 
     <!-- CSS Stylesheet Index -->
-    <link rel="stylesheet" href="../../Index/index.css" />
+    <link rel="stylesheet" href="././Index/index.css" />
   </head>
 
   <body class="d-flex flex-column min-vh-100">
