--- a/About/about.html
+++ b/About/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title Icon -->
-    <link rel="shortcut icon" href="../../Images/Longwater-Records-Icon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Images/Longwater-Records-Icon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,7 +32,7 @@
     />
 
     <!-- CSS Stylesheet Index -->
-    <link rel="stylesheet" href="../../About/about.css" />
+    <link rel="stylesheet" href="../About/about.css" />
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -43,7 +43,7 @@
           <a class="navbar-brand my-3 ms-1 p-0" href="#">
             <img
               class="img-fluid"
-              src="../../Images/Longwater Records No Text.webp"
+              src="../Images/Longwater Records No Text.webp"
               height="100"
               width="96"
               alt="Longwater Records Logo"
@@ -65,7 +65,7 @@
         <div class="collapse navbar-collapse p-5" id="navmenu">
           <ul class="nav navbar-nav ms-auto h5">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../../index.html"
+              <a class="nav-link" aria-current="page" href="../index.html"
                 >Home</a
               >
             </li>
@@ -75,7 +75,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../../Shop/shop.html">
+              <a class="nav-link" aria-current="page" href="../Shop/shop.html">
                 Shop
               </a>
             </li>
@@ -93,7 +93,7 @@
             <div class="col d-none d-lg-block">
               <img
                 class="img-fluid"
-                src="../../Images/Longwater Records No Text.webp"
+                src="../Images/Longwater Records No Text.webp"
                 alt=""
                 loading="lazy"
               />
@@ -235,13 +235,13 @@
     <footer class="container-fluid py-3 mt-auto bg-dark footer-dark text-white">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="../../index.html" class="nav-link px-2">Home</a>
+          <a href="../index.html" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link px-2">About</a>
         </li>
         <li class="nav-item">
-          <a href="../../Shop/shop.html" class="nav-link px-2">Shop</a>
+          <a href="../Shop/shop.html" class="nav-link px-2">Shop</a>
         </li>
       </ul>
       <p class="text-center">Copyright © Longwater Records 2023</p>
