--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title Icon -->
-    <link rel="shortcut icon" href="/Images/Longwater-Records-Icon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="Images/Longwater-Records-Icon.ico" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -43,7 +43,7 @@
           <a class="navbar-brand my-3 ms-1 p-0" href="#">
             <img
               class=""
-              src="/Images/Longwater Records No Text.webp"
+              src="Images/Longwater Records No Text.webp"
               height="100"
               alt=""
               loading="lazy"
@@ -67,12 +67,12 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/About/about.html"
+              <a class="nav-link" aria-current="page" href="About/about.html"
                 >About Us</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Shop/shop.html">
+              <a class="nav-link" aria-current="page" href="Shop/shop.html">
                 Shop
               </a>
             </li>
@@ -90,7 +90,7 @@
             <div class="col d-none d-md-block">
               <img
                 class="img-fluid"
-                src="/Images/Longwater Records No Text.webp"
+                src="Images/Longwater Records No Text.webp"
                 alt=""
                 loading="lazy"
               />
@@ -165,10 +165,10 @@
           <a href="#" class="nav-link px-2">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/About/about.html" class="nav-link px-2">About</a>
+          <a href="About/about.html" class="nav-link px-2">About</a>
         </li>
         <li class="nav-item">
-          <a href="/Shop/shop.html" class="nav-link px-2">Shop</a>
+          <a href="Shop/shop.html" class="nav-link px-2">Shop</a>
         </li>
       </ul>
       <p class="text-center">Copyright © Longwater Records 2023</p>
